--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,3 +9,14 @@ entrypoint = "./functions/create-squad/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/create-squad/*.html" ]
+
+[functions.strava-callback]
+enabled = true
+verify_jwt = true
+import_map = "./functions/strava-callback/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/strava-callback/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/strava-callback/*.html" ]
